Fix unfollow button show wrong color when focused

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -2023,7 +2023,10 @@ aside {
   }
 
   // Replace 'Following' with 'Unfollow'
-  &:hover {
+  &:hover,
+  &:active,
+  &:focus,
+  &:active:focus {
     span {
       display: none;
     }
@@ -2051,6 +2054,7 @@ aside {
   &:active,
   &:focus,
   &:active:focus {
+    color:            var(--unfollowButton-textColor);
     background-color: var(--unfollowButton-active-bgColor);
     border:           var(--unfollowButton-active-border);
   }
